--- a/css/ style.css
+++ b/css/ style.css
@@ -77,9 +77,9 @@ main{
 
 }
 .photos{
-    gap: 20px;
     margin-bottom: 20px;
-    width: 33%;
+    width: 296px;
+    height: 362px;
     
 }
 .photos .col{
@@ -87,13 +87,19 @@ main{
 }
 .thumbtack{
     position: relative;
-    left: 186px;
+    left: 40%;
     top: -14px;
 }
 .photos-img{
     position: relative;
+    top: -17px;
+    left: 17px;
 }
-
+.img-place-holder{
+    height: 263px;
+    width: 263px;
+    background-color: #92C952;
+}
 /*----------------
     RESPONSIVE
     Mobile First
@@ -104,7 +110,9 @@ main{
 }
 /* MD >= 768px */
 @media screen and (min-width: 768px) {
-    
+    .photos .col{
+        width: calc(100% / 2);
+    }
 }
 /* XL >= 1200px */
 @media screen and (min-width: 1200px) {
