--- a/css/ style.css
+++ b/css/ style.css
@@ -63,6 +63,7 @@ h1{
 /*HEADER*/
 header {
    width: 100%;
+   background-image: url(../assets_day1/img/wall.png);
   
    
 }
@@ -76,6 +77,7 @@ header {
 main{
     max-width: 100%;
     padding: 40px;
+    background-image: url(../assets_day1/img/cork.png);
 
 }
 /*CARD*/
@@ -83,6 +85,7 @@ main{
     margin-bottom: 20px;
     width: 296px;
     height: 362px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     
 }
 .description{
